add print friendly button in header

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6287,6 +6287,9 @@ button.close {
 .pull-right {
   float: right !important;
 }
+.gly-2x {
+  font-size: 2em;
+}
 .pull-left {
   float: left !important;
 }
