--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -1,3 +1,94 @@
-.gly-2x {
-  font-size: 2em;
+/*Estilos header
+**************************************************/
+.top-header{
+	.header-logo{
+		margin-top: 50px;
+		.logo{
+
+		}
+		.eu-logo{
+			width: 100px;
+			margin-left: 20px;
+    		display: initial;
+    		margin-top: 17px;
+		}
+	}
+	.header-sitename{
+		.oira-logo{
+			img{
+				display: block;
+				margin: 0 auto;
+			}
+		}
+		a.sitename{
+			display: block;
+			text-align: center;
+
+		}
+	}
+	.header-blocks{
+		margin-top: 50px;
+		#block-oira-blocks-oira-print-friendly{
+			display: inline-block;
+		}
+		#block-text-resize-0{
+			display: inline-block;
+		}
+		#block-menu-block-1{
+			display: inline-block;
+    		float: right;
+			.menu-name-menu-social-menu{
+				ul{
+					li{
+						display: inline-block;
+						margin-left: 10px;
+						.introduction-title{
+							display: none;
+						}
+						.introduction-image{
+							img{
+
+							}
+						}
+					}
+				}
+			}
+		}
+		#block-lang-dropdown-language{
+			#lang-dropdown-select-language{
+				border: 2px solid #003399;
+    			outline: none;
+    			border-radius: 0px;
+    			height: initial;
+    			padding: 3px 3px;
+    			background-color: #907aa0;
+    			color: white;
+			}
+		}
+		#block-search-form{
+			#search-block-form{
+				
+			}
+		}
+	}
 }
+
+
+/*Menu
+**************************************************/
+#navbar{
+	margin-top: 40px;
+}
+
+/*Iconos
+**************************************************/
+//print icon
+.gly-2x {
+  font-size: 1.5em;
+}
+.glyphicon-print:before {
+    content: "\e045";
+}
+
+/*End estilos header
+**************************************************/
