2nd commit test

--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -897,6 +897,7 @@
 @color-text-grey: #C3C3C3;
 @color-text-purple: @color-primary-dark;
 @color-text-white: @color-white;
+@color-red: #343434;
 
 
 
