Css changes Footer

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6593,3 +6593,8 @@ button.close {
 body {
   font-size: 16px;
 }
+/*FOOTER
+********************************************/
+.site-footer {
+  background-color: #b934a2;
+}
