Css changes footer 2

--- a/docroot/sites/all/themes/oira_frontend/less/footer.less
+++ b/docroot/sites/all/themes/oira_frontend/less/footer.less
@@ -2,6 +2,9 @@
 ********************************************/
 .site-footer{
 	background-color: @color-menu;
+	.footer-copyright{
+		color: @color-white;
+	}
 }
 
 
