css changes -header 01-06-2016 10:00am

--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -54,6 +54,14 @@
 				}
 			}
 		}
+		#block-search-form{
+			#search-block-form{
+				
+			}
+		}
+		#block-menu-block-3{
+
+		}
 		#block-lang-dropdown-language{
 			#lang-dropdown-select-language{
 				border: 2px solid #003399;
@@ -63,11 +71,6 @@
     			padding: 3px 3px;
     			background-color: #907aa0;
     			color: white;
-			}
-		}
-		#block-search-form{
-			#search-block-form{
-				
 			}
 		}
 	}
