--- a/docroot/sites/all/themes/oira_frontend/less/footer.less
+++ b/docroot/sites/all/themes/oira_frontend/less/footer.less
@@ -2,8 +2,38 @@
 ********************************************/
 .site-footer{
 	background-color: @color-menu;
+	.site-footer-container{
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
 	.footer-copyright{
 		color: @color-white;
+	}
+	#block-menu-menu-footer-menu{
+		display: inline-block;
+		li{
+			a{
+				color: @color-white;
+				padding: 10px 10px 0px 0px;
+			}
+		}
+	}
+	#block-menu-block-2{
+		width: 200px;
+    	float: right;
+    	margin-top: 9px;
+	}
+	.menu-block-2{
+		.menu{
+			.introduction-title{
+				display: none;
+			}
+
+			li{
+				display: inline-block;
+				margin-left: 10px;
+			}
+		}
 	}
 }
 
