--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -885,7 +885,7 @@
 //Colors
 @color-primary: #343434;
 @color-primary-dark: #303030;
-@color-menu: #B934A2;
+@color-menu: #10b2e4;
 @color-white: #FFFFFF;
 
 @color-menu-icons: #454545;
