--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -60,16 +60,24 @@
 			}
 		}
 		#block-menu-block-3{
+			display: inline-block;
+			.introduction-title{
+				background-color: @color-menu-icons;
+    			padding: 4px 4px;
+				a{
 
+				}
+			}
 		}
 		#block-lang-dropdown-language{
+			display: inline-block;
 			#lang-dropdown-select-language{
-				border: 2px solid #003399;
+				border: 2px solid @color-menu-icons;
     			outline: none;
     			border-radius: 0px;
     			height: initial;
     			padding: 3px 3px;
-    			background-color: #907aa0;
+    			background-color: @color-icon-purple;
     			color: white;
 			}
 		}
