--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -884,11 +884,11 @@
 
 //Colors
 @color-primary: #343434;
-@color-primary-dark: #303030;
+@color-primary-dark: #907aa0;
 @color-menu: #B934A2;
 @color-white: #FFFFFF;
 
-@color-menu-icons: #454545;
+@color-menu-icons: #003399;
 @color-icon-white: @color-white;
 @color-icon-purple: @color-primary-dark;
 @color-label: @color-menu;
