--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6599,23 +6599,34 @@ body {
   background-color: #10b2e4;
 }
 .site-footer .site-footer-container {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .site-footer .footer-copyright {
   color: #ffffff;
+  margin-bottom: 15px;
 }
 .site-footer #block-menu-menu-footer-menu {
   display: inline-block;
 }
 .site-footer #block-menu-menu-footer-menu li a {
   color: #ffffff;
-  padding: 10px 10px 0px 0px;
+  padding: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-left: 2px solid;
+  border-radius: 0px;
+}
+.site-footer #block-menu-menu-footer-menu .first a {
+  padding-left: 0px;
+  border-left: none;
 }
 .site-footer #block-menu-block-2 {
   width: 200px;
   float: right;
-  margin-top: 9px;
+}
+.site-footer .menu-block-2 {
+  float: right;
 }
 .site-footer .menu-block-2 .menu .introduction-title {
   display: none;
