--- a/docroot/sites/all/themes/oira_frontend/less/footer.less
+++ b/docroot/sites/all/themes/oira_frontend/less/footer.less
@@ -3,27 +3,41 @@
 .site-footer{
 	background-color: @color-menu;
 	.site-footer-container{
-		padding-top: 15px;
-		padding-bottom: 15px;
+		padding-top: 20px;
+		padding-bottom: 20px;
 	}
 	.footer-copyright{
 		color: @color-white;
+		margin-bottom: 15px;
 	}
 	#block-menu-menu-footer-menu{
 		display: inline-block;
 		li{
+
 			a{
 				color: @color-white;
-				padding: 10px 10px 0px 0px;
+				padding: 0px;
+				padding-left: 10px;
+				padding-right: 10px;
+				border-left: 2px solid;
+				border-radius: 0px;
 			}
+		}
+		.first{
+			a{
+				padding-left: 0px;
+				border-left: none;	
+			}
+			
 		}
 	}
 	#block-menu-block-2{
 		width: 200px;
     	float: right;
-    	margin-top: 9px;
+    	
 	}
 	.menu-block-2{
+		float: right;
 		.menu{
 			.introduction-title{
 				display: none;
