--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -886,8 +886,8 @@
 @color-primary: #343434;
 @color-primary-dark: #907aa0;
 @color-menu: #10b2e4;
-@color-white: #FFFFFF;
-
+@color-white: white;
+ 
 @color-menu-icons: #003399;
 @color-icon-white: @color-white;
 @color-icon-purple: @color-primary-dark;
