Primary color changed

--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -883,7 +883,7 @@
 @padding15: 15px;
 
 //Colors
-@color-primary: #343434;
+@color-primary: #00FFF0;
 @color-primary-dark: #907aa0;
 @color-menu: #10b2e4;
 @color-white: white;
