--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -55,14 +55,16 @@
 			}
 		}
 		#block-search-form{
+			margin-top: 10px;
+			margin-bottom: 10px;
 			#search-block-form{
 				
 			}
 		}
 		#block-menu-block-3{
 			display: inline-block;
-			.introduction-title{
-				background-color: @color-menu-icons;
+			.introduction-title
+{				background-color: @color-menu-icons;
     			padding: 4px 4px;
 				a{
 
