--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -9,6 +9,10 @@ body{
 	font-size: 16px;
 }
 
+input, select{
+	box-shadow: none !important;
+}
+
 
 /*END estilos comunes
 ************************************************************************************/
