--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -886,7 +886,7 @@
 @color-primary: #00FFF0;
 @color-primary-dark: #907aa0;
 @color-menu: #10b2e4;
-@color-white: white;
+@color-white: #FFFFFF;
  
 @color-menu-icons: #003399;
 @color-icon-white: @color-white;
