--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -865,6 +865,7 @@
 
 //Font sizes
 @font-size-base: 16px;
+@font-size0-75: 0.75em;
 @font-size1: 1em;
 @font-size1-2: 1.2em;
 @font-size1-4: 1.4em;
@@ -894,11 +895,15 @@
 @color-label: @color-menu;
 @color-see-more: @color-menu;
 
-@color-text-grey: #C3C3C3;
-@color-text-purple: @color-primary-dark;
+@color-text-grey: #58585a;
+@color-text-purple: #967ea6;
 @color-text-white: @color-white;
 @color-red: #343434;
+@color-background-light-purple: #dfd8e4;
 
 
+//Images
+@image-map-white: url('../images/promotional.png');
+@image-bag-purple: url('../images/oira-tool.png');
 
 /*END E-A VARIABLES*/
