--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6708,6 +6708,54 @@ input,
 select {
   box-shadow: none !important;
 }
+.h3purple {
+  color: #967ea6;
+  border-bottom: 2px solid #967ea6;
+  font-size: 2.2em;
+  padding-bottom: 3px;
+  font-weight: bold;
+}
+.h3image-promotional-materials {
+  background-image: url('../images/promotional.png');
+  background-position: right;
+  background-repeat: no-repeat;
+}
+.h3image-oira-tools {
+  background-image: url('../images/oira-tool.png');
+  background-position: right;
+  background-repeat: no-repeat;
+}
+/*END estilos comunes
+************************************************************************************/
+/*Menu
+****************************************/
+/*End menu
+************************************************************************************/
+/*ESTILOS HOME
+********************************************************/
+/*PROMOTIONAL MATERIALS
+********************************************************/
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .pane-title {
+  color: #967ea6;
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 14px;
+  font-style: italic;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .col-md-4 .views-item-columns-container {
+  background-color: #dfd8e4;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .col-md-4 .views-field-title-field h4 {
+  padding: 5px 0px 10px 15px;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .col-md-4 .views-field-title-field h4 a {
+  color: #58585a;
+  font-size: 0.75em;
+  font-weight: bold;
+}
+#block-system-main .panels-flexible-row-new-16 {
+  background-color: #dfd8e4;
+}
 /*FOOTER
 ********************************************/
 .site-footer {
