--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -866,6 +866,7 @@
 //Font sizes
 @font-size-base: 16px;
 @font-size0-75: 0.75em;
+@font-size0-85: 0.85em;
 @font-size1: 1em;
 @font-size1-2: 1.2em;
 @font-size1-4: 1.4em;
