css changes -home latest news v1

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -75,19 +75,15 @@ a.more-link{
 /*END estilos comunes
 ************************************************************************************/
 
-/*Menu
-****************************************/
-
-/*End menu
-************************************************************************************/
-
-
 /*ESTILOS HOME
 ********************************************************/
 
 /*PROMOTIONAL MATERIALS
 ********************************************************/
 #block-system-main{
+	.panels-flexible-row-new-6{
+
+	}
 	.panels-flexible-region-new-promotional_materials{
 		.pane-promotional-materials{
 			div.pane-title{
