--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -142,6 +142,11 @@
     		width: 100%;
     		display: table;
     		margin-top: 14px;
+    		li.last.leaf{
+    			a{
+    				border-right: none;
+    			}
+    		}
     		li{
     			float: initial;
     			display: table-cell;
