--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6645,6 +6645,9 @@ button.close {
   display: table;
   margin-top: 14px;
 }
+.menu-header #navbar .navbar-nav li.last.leaf a {
+  border-right: none;
+}
 .menu-header #navbar .navbar-nav li {
   float: initial;
   display: table-cell;
@@ -6753,10 +6756,6 @@ a.more-link:before {
   content: '>';
 }
 /*END estilos comunes
-************************************************************************************/
-/*Menu
-****************************************/
-/*End menu
 ************************************************************************************/
 /*ESTILOS HOME
 ********************************************************/
