--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -150,17 +150,18 @@
     		li{
     			float: initial;
     			display: table-cell;
-    			text-align: center;
+    			//text-align: center;
     			padding: 0px;
     			color: @color-white;
 				a{
 					padding: 0px;
 					padding-left: 0px;
-					padding-right: 10px;
+					padding-right: 5px;
+    				margin-right: 10px;
 				}
 				span{
 					padding-left: 0px;
-					padding-right: 35px;
+					padding-right: 15px;
 					padding-top: 2px;
     				padding-bottom: 3px;
 					.caret{
