--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6651,18 +6651,18 @@ button.close {
 .menu-header #navbar .navbar-nav li {
   float: initial;
   display: table-cell;
-  text-align: center;
   padding: 0px;
   color: #ffffff;
 }
 .menu-header #navbar .navbar-nav li a {
   padding: 0px;
   padding-left: 0px;
-  padding-right: 10px;
+  padding-right: 5px;
+  margin-right: 10px;
 }
 .menu-header #navbar .navbar-nav li span {
   padding-left: 0px;
-  padding-right: 35px;
+  padding-right: 15px;
   padding-top: 2px;
   padding-bottom: 3px;
 }
@@ -6740,6 +6740,7 @@ h4 a {
   display: block;
   text-align: right;
   font-size: 0.85em;
+  margin-top: 20px;
 }
 .more-link a:before {
   content: '>';
@@ -6755,12 +6756,72 @@ a.more-link {
 a.more-link:before {
   content: '>';
 }
+.panels-flexible-row {
+  padding-bottom: 25px;
+}
+.glyphicon-new-window {
+  display: block;
+  text-align: right;
+}
+/*Bloques de columnas*/
+.views-item-columns-container {
+  background-color: #ffffff;
+  width: 100%;
+}
+.views-item-columns-container a {
+  display: block;
+}
+.views-item-columns-container a .glyphicon-new-window {
+  display: block;
+  text-align: right;
+}
 /*END estilos comunes
 ************************************************************************************/
 /*ESTILOS HOME
 ********************************************************/
-/*PROMOTIONAL MATERIALS
-********************************************************/
+#block-system-main .view-id-slideshow .owl-wrapper .views-field-field-image {
+  position: relative;
+}
+#block-system-main .view-id-slideshow .owl-wrapper .views-field-title-field {
+  position: absolute;
+  width: 1140px;
+  top: 45%;
+  left: 10%;
+}
+#block-system-main .view-id-slideshow .owl-wrapper .views-field-title-field a {
+  color: #ffffff;
+}
+#block-system-main .view-id-slideshow .owl-wrapper .views-field-body {
+  position: absolute;
+  width: 1140px;
+  top: 63%;
+  left: 10%;
+  color: #ffffff;
+}
+#block-system-main .view-id-slideshow .owl-controls.clickable {
+  position: absolute;
+  left: 50%;
+  top: 95%;
+  transform: translate(-50%, -95%);
+  -webkit-transform: translate(-50%, -95%);
+}
+#block-system-main .view-id-slideshow .owl-controls.clickable .owl-page span {
+  background: #ffffff !important;
+}
+#block-system-main .panels-flexible-row-new-6 {
+  background-color: #dfd8e4;
+}
+#block-system-main .panels-flexible-row-new-6 .panels-flexible-region-new-news_section .view-display-id-attachment_1 {
+  border-bottom: 2px solid #907aa0;
+  padding-bottom: 30px;
+  padding-top: 20px;
+  margin-bottom: 20px;
+}
+#block-system-main .panels-flexible-row-new-6 .panels-flexible-region-new-news_section .views-item-columns-container {
+  background-color: #ffffff;
+  padding: 10px;
+  min-height: 250px;
+}
 #block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials div.pane-title {
   color: #967ea6;
   font-size: 1.2em;
@@ -6768,8 +6829,9 @@ a.more-link:before {
   margin-bottom: 14px;
   font-style: italic;
 }
-#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .col-md-4 .views-item-columns-container {
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container {
   background-color: #dfd8e4;
+  min-height: 320px;
 }
 #block-system-main .panels-flexible-row-new-16 {
   background-color: #dfd8e4;
@@ -6781,16 +6843,18 @@ a.more-link:before {
   margin-bottom: 20px;
 }
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block .field-name-title-field a {
-  font-size: 2em;
+  font-size: 1.2em;
 }
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container {
   background-color: #ffffff;
-  padding: 5px 0px 5px 10px;
+  padding: 10px;
 }
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container a {
   display: block;
+}
+#block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container a .glyphicon-new-window {
+  display: block;
   text-align: right;
-  margin-right: 10px;
 }
 #block-system-main .panels-flexible-row-new-16 .pane-views.pane-tools .pane-title {
   color: #967ea6;
