--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -233,10 +233,8 @@ a.more-link{
 	}
 }
 
-<<<<<<< 9098a9c47239ea41f75ece72aed18fad3241f8d3
-/*END HOME*/
-=======
-/*END PROMOTIONAL MATERIALS*/
+
+
 
 
 
@@ -291,16 +289,16 @@ a.more-link{
 			border-bottom: 2px solid @color-text-purple;
 			padding-bottom: 23px;
 			margin-bottom: 20px;
-			.view-id-additional_resources{
-				.content{
-					background-color: @color-white;
-					.field-name-title-field{
-						padding: 10px 10px 10px 20px;
+		}
+		#additional-resources-external_url-pane{
+			.view-additional-resources{
+				.views-item-columns-container{
+						padding: 10px!important;
 					}
 				}
 			}
 
-		}
+		 
 	}
 
 }
@@ -308,4 +306,4 @@ a.more-link{
 
 
 /*END ARTICLES*/
->>>>>>> Css articles v1
+
